# VFM

./: .gitignore  README.md  demo.bat  environment.yml  evaluate.bat  jupyter.bat  pyproject.toml  setup_vfm.py  test.bat  test_setup.py  train.bat
configs/: default.yaml
configs/experiments/: mvp_demo.yaml  quick_test.yaml
docs/: presentation.html
scripts/: train.py
src/vfm/: __init__.py
src/vfm/data/: __init__.py  synthetic.py
src/vfm/evaluation/: __init__.py
src/vfm/models/: __init__.py  backbone.py  heads.py
src/vfm/training/: __init__.py  trainer.py
tests/: test_integration.py
